--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "jose": "^6.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
