--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "colorjs.io": "^0.5.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
