--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@date-fns/utc": "^2.1.1",
+    "@faker-js/faker": "^10.0.0",
     "@fontsource/jetbrains-mono": "^5.2.6",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
