--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
@@ -29,6 +30,7 @@
     "colorjs.io": "^0.5.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "fuse.js": "^7.1.0",
     "jose": "^6.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
@@ -36,6 +38,7 @@
     "qr-code-styling": "^1.9.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.64.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-router": "^7.8.0",
     "sonner": "^2.0.7",
