--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "cp node_modules/web-tree-sitter/tree-sitter.wasm public",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -30,13 +31,18 @@
     "colorjs.io": "^0.5.2",
     "date-fns": "^4.1.0",
     "diff": "^8.0.2",
+    "diff-match-patch": "^1.0.5",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
+    "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
+    "hyntax": "^1.1.9",
     "jose": "^6.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
+    "parse5": "^8.0.0",
+    "prismjs": "^1.30.0",
     "qr-code-styling": "^1.9.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -47,7 +53,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "web-tree-sitter": "^0.25.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
