--- a/package.json
+++ b/package.json
@@ -34,16 +34,12 @@
     "diff-match-patch": "^1.0.5",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
-    "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
     "html2canvas-pro": "^1.5.12",
-    "hyntax": "^1.1.9",
     "jose": "^6.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
-    "parse5": "^8.0.0",
-    "prismjs": "^1.30.0",
     "qr-code-styling": "^1.9.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -55,8 +51,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "uuid": "^11.1.0",
-    "web-tree-sitter": "^0.25.10"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
