--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "highlight.js": "^11.11.1",
     "html2canvas-pro": "^1.5.12",
     "jose": "^6.1.0",
+    "jotai": "^2.15.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
