--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@date-fns/utc": "^2.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@faker-js/faker": "^10.0.0",
     "@fontsource/jetbrains-mono": "^5.2.6",
     "@radix-ui/react-checkbox": "^1.3.3",
