--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@date-fns/utc": "^2.1.1",
@@ -58,6 +59,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/cli": "^2.9.3",
     "@types/diff-match-patch": "^1.0.36",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
