--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "app"
 version = "0.0.0-beta.20251114"
-description = "A Tauri App"
+description = "A Collection Of Developer Tools"
 authors = ["you"]
 license = ""
 repository = ""
