--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
     "highlight.js": "^11.11.1",
+    "immer": "^10.2.0",
     "jose": "^6.1.0",
     "jotai": "^2.15.0",
     "jwt-decode": "^4.0.0",
@@ -62,7 +63,8 @@
     "react-router": "^7.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
