--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
     "highlight.js": "^11.11.1",
+    "idb-keyval": "^6.2.2",
     "immer": "^10.2.0",
     "jose": "^6.1.0",
     "jotai": "^2.15.0",
