--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.11",
+    "@tauri-apps/api": "2.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -69,7 +70,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/cli": "^2.9.3",
     "@types/diff-match-patch": "^1.0.36",
     "@types/node": "^24.2.1",
