--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router": "^7.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tauri-plugin-clipboard-api": "^2.1.11",
     "uuid": "^11.1.0",
     "zustand": "^5.0.8"
   },
