--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,5 @@ tauri = { version = "2.9.2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-prevent-default = "4"
 tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", branch = "v2" }
+sha2 = { version = "0.10.9" }
+hex = "0.4"
