--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-hotkeys-hook": "^5.1.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.8.0",
+    "react-window": "^2.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tauri-plugin-clipboard-api": "^2.1.11",
