--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,3 +32,4 @@ reqwest = { version = "0.12.25" }
 url = { version = "2.5.7" }
 scraper = { version = "0.25.0" }
 base64 = { version = "0.22.1" }
+tauri-plugin-opener = "2"
